[gd_scene load_steps=9 format=3 uid="uid://b2ngl1siuokub"]

[ext_resource type="Script" path="res://scripts/padlock.gd" id="1_ooib4"]
[ext_resource type="Texture2D" uid="uid://gnccdsqutldj" path="res://assets/minigame/padlock/padlock.png" id="2_7td4y"]
[ext_resource type="Theme" uid="uid://f7e0gm4035bk" path="res://themes/minigame.tres" id="3_2rcu7"]
[ext_resource type="Theme" uid="uid://cygm3es3wkwhp" path="res://assets/UI/Menu/resources_buttons/quit_default.tres" id="4_7u7q7"]

[sub_resource type="Theme" id="Theme_8hnu2"]

[sub_resource type="Theme" id="Theme_gpbw7"]

[sub_resource type="Theme" id="Theme_b8130"]

[sub_resource type="Theme" id="Theme_fikqp"]

[node name="padlock" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ooib4")

[node name="padlock" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 510.0
offset_top = 240.0
offset_right = 1590.0
offset_bottom = 1160.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_7td4y")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.0
offset_top = -51.0
offset_right = 107.0
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)
theme = ExtResource("3_2rcu7")

[node name="Buttons123" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_2rcu7")

[node name="Button1" type="Button" parent="VBoxContainer/Buttons123"]
layout_mode = 2
theme = ExtResource("3_2rcu7")
toggle_mode = true
text = "....."

[node name="Button2" type="Button" parent="VBoxContainer/Buttons123"]
layout_mode = 2
theme = SubResource("Theme_8hnu2")
toggle_mode = true
text = "....."

[node name="Button3" type="Button" parent="VBoxContainer/Buttons123"]
layout_mode = 2
theme = SubResource("Theme_gpbw7")
toggle_mode = true
text = "....."

[node name="Buttons456" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_b8130")

[node name="Button4" type="Button" parent="VBoxContainer/Buttons456"]
layout_mode = 2
toggle_mode = true
text = "....."

[node name="Button5" type="Button" parent="VBoxContainer/Buttons456"]
layout_mode = 2
toggle_mode = true
text = "....."

[node name="Button6" type="Button" parent="VBoxContainer/Buttons456"]
layout_mode = 2
toggle_mode = true
text = "....."

[node name="Buttons789" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_fikqp")

[node name="Button7" type="Button" parent="VBoxContainer/Buttons789"]
layout_mode = 2
toggle_mode = true
text = "....."

[node name="Button8" type="Button" parent="VBoxContainer/Buttons789"]
layout_mode = 2
toggle_mode = true
text = "....."

[node name="Button9" type="Button" parent="VBoxContainer/Buttons789"]
layout_mode = 2
toggle_mode = true
text = "....."

[node name="sair" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.003
offset_top = 300.0
offset_right = 120.002
offset_bottom = 398.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_7u7q7")

[connection signal="toggled" from="VBoxContainer/Buttons123/Button1" to="." method="_on_button_1_toggled"]
[connection signal="toggled" from="VBoxContainer/Buttons123/Button2" to="." method="_on_button_2_toggled"]
[connection signal="toggled" from="VBoxContainer/Buttons123/Button3" to="." method="_on_button_3_toggled"]
[connection signal="toggled" from="VBoxContainer/Buttons456/Button4" to="." method="_on_button_4_toggled"]
[connection signal="toggled" from="VBoxContainer/Buttons456/Button5" to="." method="_on_button_5_toggled"]
[connection signal="toggled" from="VBoxContainer/Buttons456/Button6" to="." method="_on_button_6_toggled"]
[connection signal="toggled" from="VBoxContainer/Buttons789/Button7" to="." method="_on_button_7_toggled"]
[connection signal="toggled" from="VBoxContainer/Buttons789/Button8" to="." method="_on_button_8_toggled"]
[connection signal="toggled" from="VBoxContainer/Buttons789/Button9" to="." method="_on_button_9_toggled"]
[connection signal="pressed" from="sair" to="." method="_on_sair_pressed"]
